--- a/templates/pedidos/pedido/historial_pedido.html
+++ b/templates/pedidos/pedido/historial_pedido.html
@@ -8,6 +8,9 @@
                 Fecha
             </th>
             <th>
+                User
+            </th>
+            <th>
                 Observación
             </th>
             <th>
@@ -23,6 +26,9 @@
             <tr>
                 <td>
                     {{ h.fecha_hora_registro|date:'d/M/Y H:i' }}
+                </td>
+                <td>
+                    {{ h.user.get_full_name }}
                 </td>
                 <td>
                     {{ h.detalle|default:''|upper|linebreaksbr }}
