--- a/templates/public/landing/register.html
+++ b/templates/public/landing/register.html
@@ -201,8 +201,17 @@
 {% block jscript %}
     <script src="/static/js/forms.js?version=13"></script>
     <script>
-        $(document).ready(function () {
 
+        const config = {
+            ADDITIONAL_PAPER_PRICE: parseFloat('{{ conference.value_adittional_paper|default:0 }}'.replace(',', '.')),
+            EXTRA_SHEET_PRICE: parseFloat('{{ conference.value_adittional_sheet|default:0 }}'.replace(',', '.')),
+            BASE_SHEETS: parseInt('{{ conference.max_sheets|default:0 }}'),
+            BASE_PAPERS: parseInt('{{ conference.max_papers|default:0 }}'),
+            ROLE: parseInt({{ filtro.role }}),
+            ROLES_EVIDENCIA: [3, 4]
+        };
+
+        $(document).ready(function () {
             {% if request.user.is_authenticated %}
                 $('#id_email').prop('readonly', true);
                 $('#id_first_name').prop('readonly', true);
@@ -214,15 +223,6 @@
                 maxSize: 4,
                 acceptedFormats: '.pdf,.jpg,.jpeg,.png'
             });
-
-            const config = {
-                ADDITIONAL_PAPER_PRICE: parseFloat('{{ conference.value_adittional_paper|default:0 }}'.replace(',', '.')),
-                EXTRA_SHEET_PRICE: parseFloat('{{ conference.value_adittional_sheet|default:0 }}'.replace(',', '.')),
-                BASE_SHEETS: parseInt('{{ conference.max_sheets|default:0 }}'),
-                BASE_PAPERS: parseInt('{{ conference.max_papers|default:0 }}'),
-                ROLE: parseInt({{ filtro.role }}),
-                ROLES_EVIDENCIA: [3, 4]
-            };
 
             let initialPrice = $('#value-counter').text();
 
@@ -332,15 +332,32 @@
 
         function funcionAntesDeGuardar() {
             let detalles = [];
+            let basePrice = parseInt($('#value-counter').data('base-price'));
+            let isStudent = $('#id_es_estudiante').is(':checked');
 
-            $('#tbPapers tr').each(function () {
+            $('#tbPapers tr').each(function (index) {
                 let descripcion = $(this).find('input[type="text"]').val();
-                let hojas = $(this).find('input[type="number"]').val();
+                let hojas = parseInt($(this).find('input[type="number"]').val());
 
                 if (descripcion && hojas) {
+                    let paperValue = 0;
+
+                    if (index === 0) {
+                        paperValue = isStudent ? 0 : basePrice;
+                        if (hojas > config.BASE_SHEETS) {
+                            paperValue += (hojas - config.BASE_SHEETS) * config.EXTRA_SHEET_PRICE;
+                        }
+                    }
+                    else {
+                        paperValue = config.ADDITIONAL_PAPER_PRICE;
+                        if (hojas > config.BASE_SHEETS) {
+                            paperValue += (hojas - config.BASE_SHEETS) * config.EXTRA_SHEET_PRICE;
+                        }
+                    }
                     detalles.push({
                         description: descripcion,
-                        sheets: parseInt(hojas)
+                        sheets: hojas,
+                        value: paperValue
                     });
                 }
             });
@@ -357,6 +374,7 @@
                     id: $(this).val(),
                 });
             });
+
             if (topics.length > 0) {
                 $('<input>').attr({
                     type: 'hidden',
