--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -481,7 +481,7 @@
                                         <div class="de-team-list">
                                             <div class="team-pic">
                                                 {% if cp.photo %}
-                                                    <img src="{{ cp.photo.url }}" class="img-responsive"
+                                                    <img src="{{ cp.photo.url }}" class="img-responsive" style="width: 192px;height: 192px"
                                                          alt="{{ cp.name }}">
                                                 {% else %}
                                                     {% if cp.sexo == 'MASCULINO' %}
