--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -568,7 +568,7 @@
                                             <div class="de-team-list">
                                                 <div class="team-pic">
                                                     {% if c.photo %}
-                                                        <img src="{{ c.photo.url }}" class="img-responsive img-circle"
+                                                        <img src="{{ c.photo.url }}" class="img-responsive img-circle" style="width: 192px;height: 192px"
                                                              alt="{{ cp.name }}">
                                                     {% else %}
                                                         {% if c.sexo == 'MASCULINO' %}
